# corewar

./: ._champs  .gitignore  .nfs.2005117e.3445  1290  CMakeLists.txt  Makefile  T2.sh  asm  author  bot.cor  bot.s  corewar  corewar.tar  cyce.sh  cycle.c  d.sh  environment.c  ex.cor  exe.sh  file.txt  file_15742.txt  file_15745.txt  file_16287.txt  file_180.txt  file_3550.txt  file_6087.txt  file_6090.txt  ft_file.txt  ft_file_15742.txt  ft_file_15746.txt  ft_file_16288.txt  ft_file_16297.txt  ft_file_180.txt  ft_file_3525.txt  ft_file_3550.txt  ft_file_6086.txt  ft_file_6092.txt  live.c  op.h  operation.c  (+10 more)
AMS_test/cor/: diff.sh  ft_add_rrr.cor  ldi_carry.s  ldi_ddr.s  ldi_drr.s  live_d.s  lld_dr.s  lldi_ddr.s  or_dir.s  or_irr.s  or_rrr.s  orig_add_rrr  our_add_rrr  sti_rdd.s  sti_rid.s  sub_rrr.s
asm/: CMakeLists.txt  Makefile  asm
asm/asm.dSYM/Contents/Resources/DWARF/: asm
asm/lib/libft/includes/: libft.h
asm/lib/libft/src/char/: ft_isascii.c  ft_toupper.c
asm/lib/libft/src/convert/: ft_atoi.c
asm/lib/libft/src/ft_printf/src/: ft_print_c.c  ft_print_former.c  ft_print_no_specif.c  ft_print_q.c  ft_print_s.c  istrue.c  make_output_str_di.c  make_output_str_o.c  make_output_str_u.c
asm/lib/libft/src/lst/: ft_lstadd.c  ft_lstiter.c  ft_lstmap.c
asm/lib/libft/src/mem/: ft_bzero.c  ft_memalloc.c  ft_memcmp.c  ft_memmove.c
asm/lib/libft/src/put/: ft_putchar.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c
asm/lib/libft/src/str/: ft_strclr.c  ft_strcpy.c  ft_strequ.c  ft_striteri.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncpy.c  ft_strnstr.c  ft_strsub.c  ft_strtrim.c
asm/src/: errors.c
asm/src/free/: free_memory.c
asm/src/memory/: memory_struct.c
asm/src/validate/: compare_with_default_op.c  count_bytes.c  handle_main_information.c  manipulations.c
asmblr/include/: asm.h  op.h
asmblr/lib/libft/: Makefile  author  libft.mk
asmblr/src/: main.c
asmblr/src/free/: free_structures.c
asmblr/src/memory/: memory_struct.c
asmblr/src/read_and_write/: get_info_from_file.c  write_data_in_file.c
asmblr/src/validate/: handle_label_and_opcode.c  handle_opcode_args.c  lexical_valid_end_extract_data.c  manipulations.c  save_options.c  validate_helpers.c
champs/: ._1.txt  ._11.cor  ._42.cor  ._42.s  ._Backward.s  ._Car.s  ._Death.s  ._Gagnant.s  ._Octobre_Rouge_V4.2.s  ._Survivor.s  ._Torpille.s  ._asm  ._barriere.s  ._championships  ._ex.s  ._examples  ._jumper.s  ._lde.s  ._leeloo.s  ._mat.s  ._maxidef.s  ._mortel.s  ._new.s  ._sebc.s  ._slider2.s  ._tdc2.s  ._tdc3.s  ._tdc4.s  ._toto.s  1.txt  11.cor  42.cor
champs copy/: ex.cor  ex.s  exe.sh  toto.cor  toto.s
champs/championships/: ._2014
champs/championships/2014/: ._bguy  ._bjacob  ._brandazz  ._cdivry  ._clafleur  ._dcohen  ._ekocevar  ._esusseli  ._evlasova  ._fcorre  ._gbir  ._gjestin  ._gleger  ._gmange  ._gpetrov  ._gudepard  ._hmichals  ._hmoutaou  ._kelickel  ._kmonrose  ._ldesgoui  ._lseguin  ._lsirigna  ._mbacoux  ._mconraux  ._rabid-on  ._results.txt  ._rmasse  ._sbuono  ._srabah-m  ._tdemay  ._vrey  ._ybouvet
champs/examples/: ._bee_gees.s  ._bigzork.s  ._fluttershy.s  ._helltrain.s  ._turtle.s  ._zork.s
corewar_t/: ._champs  ._corewar  ex.cor  ex.s
includes/: op.h
libft/: ft_printf.h.gch
libft/src/: char_handler.c  ft_bzero.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstiter.c  ft_memchr.c  ft_memdel.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_strcat.c  ft_strclr.c  ft_strcmp.c  ft_strdup.c  ft_striter.c  ft_strjoin.c  ft_strlcat.c  ft_strnequ.c  ft_strnew.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c  get_modif.c  num_list.c  str_handler.c  util.c  util_bonus.c
players with which VM works/: Survivor.s
resourses/: jump.cor  jump.s  test.cor  test.s  test1.cor  test1.s
resourses/scenario/: add_rrr.cor  add_rrr.s  aff.cor  aff.s  asm_t.sh  ld_carry.cor  ld_carry.s  ld_cod_invalid.cor  ld_cod_wrong.cor  ld_dr.cor  ld_dr.s  ld_ir.cor  ld_ir.s  ldi_ddr.cor  ldi_drr.cor  ldi_idr.cor  ldi_idr.s  ldi_irr.cor  ldi_irr.s  ldi_rdr.cor  ldi_rdr.s  ldi_rrr.cor  ldi_rrr.s  live_d.cor  lld_dr.cor  lld_ir.cor  lld_ir.s  lldi_ddr.cor  lldi_drr.cor  lldi_drr.s  lldi_idr.cor  lldi_idr.s  lldi_irr.s  lldi_rdr.cor  lldi_rdr.s  lldi_rrr.cor  lldi_rrr.s  or_dir.cor  or_drr.cor  or_drr.s  (+25 more)
slider/: T2.sh  file.txt  ft_corewar  ft_file.txt
src/: add.c  and.c  arg_parser.c  arg_parser.c.orig  c_add.c  c_aff.c  c_and.c  c_fork.c  c_ld.c  c_ldi.c  c_lfork.c  c_live.c  c_lld.c  c_lldi.c  c_st.c  c_sti.c  c_sub.c  c_zjmp.c  coding_byte_parser.c  cycle.c  environment.c  environment.c.orig  ld.c  ldi.c  live.c  operation.c  operation_exec.c  process.c  read_write_mem.c  st.c  sti.c  ui.c  ui_helper.c  ui_util.c  util.c  utility.c  vm.c  vm.c.orig  vm_util.c  zjmp.c
st/: 1.s
sti_test/: sti_rdd.s  sti_rdd_2.s  sti_rdr.s  sti_rid.cor  sti_rid.s  sti_rrr.s
t_files/: my_add_rrr.txt  my_ex.txt  my_ld_cod_wrong.txt  my_ld_dr.txt  my_ld_ir.txt  my_ldi_ddr.txt  my_ldi_idr.txt  my_ldi_irr.txt  my_ldi_rdr.txt  my_lld_ir.txt  my_lldi_idr.txt  my_lldi_rrr.txt  my_maxidef.txt  my_or_dir.txt  my_or_drr.txt  my_or_irr.txt  my_or_rdr.txt  my_or_rir.txt  my_or_rrr.txt  my_sam_2.0.txt  my_st_rr.txt  my_sti_rid.txt  my_sti_rir.txt  my_sti_rrd.txt  my_sti_rrr.txt  my_sub_rrr.txt  orig_.txt  orig_Survivor.txt  orig_ldi_drr.txt  orig_ldi_rdr.txt  orig_ldi_rrr.txt  orig_live_d.txt  orig_lld_dr.txt  orig_lld_tr.txt  orig_lldi_ddr.txt  orig_lldi_drr.txt  orig_lldi_rdr.txt  orig_maxidef.txt  orig_or_idr.txt  orig_or_irr.txt  (+9 more)
vm/includes/: op.h
vm/libft/: Makefile
vm/libft/includes/: ft_printf.h
vm/libft/src/: ft_append.c  ft_atoi.c  ft_isalnum.c  ft_isdigit.c  ft_lstadd_end.c  ft_lstdelone.c  ft_lstmap.c  ft_lstnew.c  number.c  (+32 more)
vm/src/: c_add.c  c_aff.c  c_and.c  c_fork.c  c_ldi.c  c_live.c  c_lldi.c  c_zjmp.c  coding_byte_parser.c  cycle.c  environment.c  extend.c  operation.c  process.c  util.c  utility.c  vm.c  vm_util.c
(+76 files in other folders)
