cmake_minimum_required(VERSION 3.9)
project(corewar)

set(CMAKE_CXX_STANDARD 11)

add_executable(corewar
        asmblr/include/asm.h
        asmblr/include/op.h
        asmblr/lib/libft/includes/libft.h
        asmblr/lib/libft/src/char/ft_isalnum.c
        asmblr/lib/libft/src/char/ft_isalpha.c
        asmblr/lib/libft/src/char/ft_isascii.c
        asmblr/lib/libft/src/char/ft_isdigit.c
        asmblr/lib/libft/src/char/ft_isprint.c
        asmblr/lib/libft/src/char/ft_strsplit.c
        asmblr/lib/libft/src/char/ft_tolower.c
        asmblr/lib/libft/src/char/ft_toupper.c
        asmblr/lib/libft/src/convert/ft_atoi.c
        asmblr/lib/libft/src/convert/ft_itoa.c
        asmblr/lib/libft/src/ft_printf/includes/ft_printf.h
        asmblr/lib/libft/src/ft_printf/src/discharges.c
        asmblr/lib/libft/src/ft_printf/src/ft_find.c
        asmblr/lib/libft/src/ft_printf/src/ft_find_length.c
        asmblr/lib/libft/src/ft_printf/src/ft_print_b.c
        asmblr/lib/libft/src/ft_printf/src/ft_print_c.c
        asmblr/lib/libft/src/ft_printf/src/ft_print_di.c
        asmblr/lib/libft/src/ft_printf/src/ft_print_former.c
        asmblr/lib/libft/src/ft_printf/src/ft_print_m.c
        asmblr/lib/libft/src/ft_printf/src/ft_print_no_specif.c
        asmblr/lib/libft/src/ft_printf/src/ft_print_oux.c
        asmblr/lib/libft/src/ft_printf/src/ft_print_q.c
        asmblr/lib/libft/src/ft_printf/src/ft_print_s.c
        asmblr/lib/libft/src/ft_printf/src/ft_printf.c
        asmblr/lib/libft/src/ft_printf/src/istrue.c
        asmblr/lib/libft/src/ft_printf/src/make_former.c
        asmblr/lib/libft/src/ft_printf/src/make_output_str_di.c
        asmblr/lib/libft/src/ft_printf/src/make_output_str_o.c
        asmblr/lib/libft/src/ft_printf/src/make_output_str_u.c
        asmblr/lib/libft/src/ft_printf/src/make_output_str_x.c
        asmblr/lib/libft/src/ft_printf/src/put_zero.c
        asmblr/lib/libft/src/line/get_next_line.c
        asmblr/lib/libft/src/line/get_next_line.h
        asmblr/lib/libft/src/lst/ft_lstadd.c
        asmblr/lib/libft/src/lst/ft_lstdel.c
        asmblr/lib/libft/src/lst/ft_lstdelone.c
        asmblr/lib/libft/src/lst/ft_lstiter.c
        asmblr/lib/libft/src/lst/ft_lstmap.c
        asmblr/lib/libft/src/lst/ft_lstnew.c
        asmblr/lib/libft/src/mem/ft_bzero.c
        asmblr/lib/libft/src/mem/ft_memalloc.c
        asmblr/lib/libft/src/mem/ft_memccpy.c
        asmblr/lib/libft/src/mem/ft_memchr.c
        asmblr/lib/libft/src/mem/ft_memcmp.c
        asmblr/lib/libft/src/mem/ft_memcpy.c
        asmblr/lib/libft/src/mem/ft_memdel.c
        asmblr/lib/libft/src/mem/ft_memmove.c
        asmblr/lib/libft/src/mem/ft_memset.c
        asmblr/lib/libft/src/put/ft_putchar.c
        asmblr/lib/libft/src/put/ft_putchar_fd.c
        asmblr/lib/libft/src/put/ft_putendl.c
        asmblr/lib/libft/src/put/ft_putendl_fd.c
        asmblr/lib/libft/src/put/ft_putnbr.c
        asmblr/lib/libft/src/put/ft_putnbr_fd.c
        asmblr/lib/libft/src/put/ft_putstr.c
        asmblr/lib/libft/src/put/ft_putstr_fd.c
        asmblr/lib/libft/src/str/ft_strcat.c
        asmblr/lib/libft/src/str/ft_strchr.c
        asmblr/lib/libft/src/str/ft_strclr.c
        asmblr/lib/libft/src/str/ft_strcmp.c
        asmblr/lib/libft/src/str/ft_strcpy.c
        asmblr/lib/libft/src/str/ft_strdel.c
        asmblr/lib/libft/src/str/ft_strdup.c
        asmblr/lib/libft/src/str/ft_strequ.c
        asmblr/lib/libft/src/str/ft_striter.c
        asmblr/lib/libft/src/str/ft_striteri.c
        asmblr/lib/libft/src/str/ft_strjoin.c
        asmblr/lib/libft/src/str/ft_strlcat.c
        asmblr/lib/libft/src/str/ft_strlen.c
        asmblr/lib/libft/src/str/ft_strmap.c
        asmblr/lib/libft/src/str/ft_strmapi.c
        asmblr/lib/libft/src/str/ft_strncat.c
        asmblr/lib/libft/src/str/ft_strncmp.c
        asmblr/lib/libft/src/str/ft_strncpy.c
        asmblr/lib/libft/src/str/ft_strnequ.c
        asmblr/lib/libft/src/str/ft_strnew.c
        asmblr/lib/libft/src/str/ft_strnstr.c
        asmblr/lib/libft/src/str/ft_strrchr.c
        asmblr/lib/libft/src/str/ft_strstr.c
        asmblr/lib/libft/src/str/ft_strsub.c
        asmblr/lib/libft/src/str/ft_strtrim.c
        asmblr/src/free/free_memory.c
        asmblr/src/free/free_structures.c
        asmblr/src/memory/memory_struct.c
        asmblr/src/read_and_write/get_info_from_file.c
        asmblr/src/read_and_write/write_data_in_file.c
        asmblr/src/validate/compare_with_default_op.c
        asmblr/src/validate/count_bytes.c
        asmblr/src/validate/handle_label_and_opcode.c
        asmblr/src/validate/handle_main_information.c
        asmblr/src/validate/handle_opcode_args.c
        asmblr/src/validate/lexical_valid_end_extract_data.c
        asmblr/src/validate/manipulations.c
        asmblr/src/validate/save_options.c
        asmblr/src/validate/validate_helpers.c
        asmblr/src/errors.c
        asmblr/src/main.c
        vm/includes/op.h
        vm/libft/includes/ft_printf.h
        vm/libft/src/char_handler.c
        vm/libft/src/ft_append.c
        vm/libft/src/ft_atoi.c
        vm/libft/src/ft_bzero.c
        vm/libft/src/ft_isalnum.c
        vm/libft/src/ft_isalpha.c
        vm/libft/src/ft_isascii.c
        vm/libft/src/ft_isdigit.c
        vm/libft/src/ft_isprint.c
        vm/libft/src/ft_itoa.c
        vm/libft/src/ft_lstadd.c
        vm/libft/src/ft_lstadd_end.c
        vm/libft/src/ft_lstdel.c
        vm/libft/src/ft_lstdelone.c
        vm/libft/src/ft_lstiter.c
        vm/libft/src/ft_lstmap.c
        vm/libft/src/ft_lstnew.c
        vm/libft/src/ft_lstsort.c
        vm/libft/src/ft_memalloc.c
        vm/libft/src/ft_memccpy.c
        vm/libft/src/ft_memchr.c
        vm/libft/src/ft_memcmp.c
        vm/libft/src/ft_memcpy.c
        vm/libft/src/ft_memdel.c
        vm/libft/src/ft_memmove.c
        vm/libft/src/ft_memset.c
        vm/libft/src/ft_printf.c
        vm/libft/src/ft_putchar.c
        vm/libft/src/ft_putchar_fd.c
        vm/libft/src/ft_putendl.c
        vm/libft/src/ft_putendl_fd.c
        vm/libft/src/ft_putnbr.c
        vm/libft/src/ft_putnbr_fd.c
        vm/libft/src/ft_putstr.c
        vm/libft/src/ft_putstr_fd.c
        vm/libft/src/ft_redup.c
        vm/libft/src/ft_renew.c
        vm/libft/src/ft_strcat.c
        vm/libft/src/ft_strchr.c
        vm/libft/src/ft_strclr.c
        vm/libft/src/ft_strcmp.c
        vm/libft/src/ft_strcpy.c
        vm/libft/src/ft_strdel.c
        vm/libft/src/ft_strdup.c
        vm/libft/src/ft_strequ.c
        vm/libft/src/ft_striter.c
        vm/libft/src/ft_striteri.c
        vm/libft/src/ft_strjoin.c
        vm/libft/src/ft_strlcat.c
        vm/libft/src/ft_strlen.c
        vm/libft/src/ft_strmap.c
        vm/libft/src/ft_strmapi.c
        vm/libft/src/ft_strncat.c
        vm/libft/src/ft_strncmp.c
        vm/libft/src/ft_strncpy.c
        vm/libft/src/ft_strnequ.c
        vm/libft/src/ft_strnew.c
        vm/libft/src/ft_strnstr.c
        vm/libft/src/ft_strrchr.c
        vm/libft/src/ft_strsplit.c
        vm/libft/src/ft_strstr.c
        vm/libft/src/ft_strsub.c
        vm/libft/src/ft_strtrim.c
        vm/libft/src/ft_tolower.c
        vm/libft/src/ft_toupper.c
        vm/libft/src/get_modif.c
        vm/libft/src/get_next_line.c
        vm/libft/src/num_list.c
        vm/libft/src/number.c
        vm/libft/src/number_handler.c
        vm/libft/src/parse.c
        vm/libft/src/str_handler.c
        vm/libft/src/string.c
        vm/libft/src/util.c
        vm/libft/src/util_bonus.c
        vm/libft/src/wide_str.c
        vm/src/arg_parser.c
        vm/src/c_add.c
        vm/src/c_aff.c
        vm/src/c_and.c
        vm/src/c_fork.c
        vm/src/c_ld.c
        vm/src/c_ldi.c
        vm/src/c_lfork.c
        vm/src/c_live.c
        vm/src/c_lld.c
        vm/src/c_lldi.c
        vm/src/c_st.c
        vm/src/c_sti.c
        vm/src/c_zjmp.c
        vm/src/coding_byte_parser.c
        vm/src/cycle.c
        vm/src/environment.c
        vm/src/extend.c
        vm/src/operation.c
        vm/src/operation_exec.c
        vm/src/process.c
        vm/src/read_write_mem.c
        vm/src/ui.c
        vm/src/ui_helper.c
        vm/src/ui_util.c
        vm/src/util.c
        vm/src/utility.c
        vm/src/vm.c
        vm/src/vm_util.c)
